--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "express-validator": "^7.3.1",
-    "mongoose": "^9.1.3"
+    "mongoose": "^9.1.3",
+    "pm2": "^6.0.14"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
